# ultrapyup

./: .gitignore  .rules  README.md  lefthook.yaml  license.md  pyproject.toml  ruff.toml
.github/: CONTRIBUTING.md  FUNDING.yaml
.github/actions/ci/: action.yaml
.github/workflows/: cd.yaml  ci.yaml
.zed/: settings.json
src/ultrapy/: __init__.py  editor.py  initialize.py  package_manager.py  pre_commit.py  utils.py
src/ultrapyup/: __init__.py  editor.py  initialize.py  package_manager.py  pre_commit.py  utils.py
src/ultrapyup/resources/: README.md  ruff_base.toml
tests/: README.md  __init__.py  conftest.py  test_editor.py  test_initialize.py  test_migrate.py  test_package_manager.py  test_pre_commit.py  test_utils.py
